Fixed overlap with sidebar and container

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,7 @@ body{
     background-size: contain;
     background-blend-mode: soft-light;
     text-align: center;
+    margin-left: 200px;
   }
   
   
